contour/http-echo/example-http-echo-pods.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-sample-traffic
  labels:
    name: nginx-sample-traffic

---

kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: nginx-sample-traffic
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 50m
          memory: 50Mi
---

kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: nginx-sample-traffic
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 50m
          memory: 50Mi
